<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductsActivity">

	<TextView
			android:text="12%"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:id="@+id/tvTax"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintBaseline_toBaselineOf="@+id/textView7"/>

	<TextView
			android:text="@string/activity_payment_tax"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView7"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView5"
			android:textStyle="bold"/>

	<TextView
			android:text="@string/activity_payment_total"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView8"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView7"
			android:textStyle="bold"/>

	<TextView
	    android:text="0"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/tvSubTotal"
	    android:textStyle="bold"
	    android:textColor="@android:color/holo_blue_dark"
	    android:layout_marginEnd="8dp"
	    app:layout_constraintEnd_toEndOf="parent"
	    app:layout_constraintBaseline_toBaselineOf="@+id/textView5"/>

	<TextView
			android:text="0"
			android:layout_width="wrap_content"
			android:layout_height="16dp"
			android:id="@+id/tvTotal"
			android:textStyle="bold"
			android:textColor="@android:color/holo_blue_dark"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@+id/textView8"/>
	<androidx.appcompat.widget.Toolbar
	android:id="@+id/toolbar"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:titleTextColor="#ffffff"
	android:background="?attr/colorPrimary"
	android:theme="?attr/actionBarTheme"
	android:minHeight="?attr/actionBarSize"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintEnd_toEndOf="parent"
	/>

	<Button
			android:text="@string/activity_payment_pay_cart"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/btnPayCart"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/tilCVVCode"/>

	<TextView
			android:text="@string/activity_payment_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/toolbar"
			android:textStyle="bold"/>
	<TextView
	    android:text="TextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/tvDate" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
	    app:layout_constraintBaseline_toBaselineOf="@+id/textView"/>

	<TextView
			android:text="@string/activity_payment_sub_total"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView5"
			android:textStyle="bold"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="parent"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView9"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView8"
			android:text="@string/activity_payment_card_details"
			android:textStyle="bold"/>

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView9"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:id="@+id/tilCardNumber">

		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_payment_card_number"
				android:singleLine="true"
				android:selectAllOnFocus="true"
				android:imeOptions="actionNext"
				android:inputType="number"
				android:digits="123456789"/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/tilCardNumber"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:id="@+id/tilExpirationDate">

		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_payment_expiration_date"
				android:singleLine="true"
				android:selectAllOnFocus="true"
				android:imeOptions="actionNext"
				android:digits="123456789/"
				android:inputType="number"
				android:editable="false"
				android:focusableInTouchMode="false"/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/tilExpirationDate"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:id="@+id/tilCVVCode">

		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/activity_payment_cvv_code"
				android:singleLine="true"
				android:selectAllOnFocus="true"
				android:imeOptions="actionDone"
				android:inputType="number"
				android:digits="123456789"/>
	</com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>