<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProductsActivity"
        android:padding="10dp">


    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_check"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
            android:text="@string/dialog_payment_success_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tvAmount"/>

    <TextView
            android:text="@string/dialog_payment_success_message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAmount"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView10"/>

    <TextView
            android:text="@string/dialog_payment_success_message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount"
            app:layout_constraintStart_toStartOf="@+id/tvAmount"
            app:layout_constraintEnd_toEndOf="@+id/tvAmount"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintHorizontal_bias="0.5"/>

    <Button
            android:text="@string/dialog_payment_success_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContinue"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            android:textAllCaps="false"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>